@@ -37,7 +37,7 @@ Dist::Zilla::Plugin::Test::Pod::No404s = 1.003
 Dist::Zilla::Plugin::Test::Kwalitee = 2.10
 Dist::Zilla::Plugin::MojibakeTests = 0.8
 Dist::Zilla::Plugin::Test::ReportPrereqs = 0.022
-Dist::Zilla::Plugin::Test::Portability = 0
+Dist::Zilla::Plugin::Test::Portability = 2.000007
 Dist::Zilla::Plugin::Test::CleanNamespaces = 0.006
 Dist::Zilla::Plugin::PruneCruft = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
@@ -86,7 +86,6 @@ Dist::Zilla::Plugin::ConfirmRelease = 0
 Text::Tabs = 2013.0426
 Test::Spelling = 0.19
 CPAN::Changes = 0.23
-Test::Portability::Files = 0.06
 ; except this one
 Pod::Markdown = 1.500   ; fixes for metacpan links
 Pod::Elemental::PerlMunger = 0.200001
